--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-i18n": "^8.27.1",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.0",
