--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-api-query": "^1.9.1",
     "vue-axios": "^3.4.1",
     "vue-i18n": "^8.27.1",
     "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
