--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-api-query": "^1.9.1",
