--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-api-query": "^1.9.1",
     "vue-axios": "^3.4.1",
