--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-api-query": "^1.9.1",
     "vue-axios": "^3.4.1",
     "vue-i18n": "^8.27.1",
+    "vue-mask": "^1.0.0",
     "vue-router": "^3.5.3",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
