Inserção do vue-select

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-i18n": "^8.27.1",
     "vue-mask": "^1.0.0",
     "vue-router": "^3.5.3",
+    "vue-select": "^3.18.3",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
